--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,6 +20,7 @@
     "@types/react-responsive": "^8.0.3",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-responsive": "^9.0.0-beta.2",
@@ -46,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.4.2",
     "@types/styled-components": "^5.1.11",
     "autoprefixer": "^9",
     "postcss": "^7",
