--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "@brainhubeu/react-carousel": "^2.0.4",
     "@craco/craco": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -19,6 +20,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-responsive": "^8.0.3",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-calendar": "^3.4.0",
@@ -26,6 +28,9 @@
     "react-redux": "^7.2.0",
     "react-responsive": "^9.0.0-beta.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.6.2",
     "typescript": "~4.1.5"
@@ -34,7 +39,10 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "schema:download": "npx apollo service:download --endpoint=http://localhost:9000/graphql ./src/app/graphql-schema.json",
+    "schema:generate-watch": "npx apollo codegen:generate --localSchemaFile=./src/app/graphql-schema.json --target=typescript --tagName=gql --watch",
+    "start:prod": "node ./server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.4.2",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.11",
     "autoprefixer": "^9",
     "postcss": "^7",
